...
        text: self.binding(
          to: \.searchText,
          updating: { self.controller.updateSearchText($0) }
        )
      )
      .padding(top: 0, leading: 16, trailing: 16)
      .accessibilityIdentifier("permissions.confirm.add.search")

      self.list(for: state)

      PrimaryButton(
        title: .localized(key: .apply),
        action: self.controller.apply
      )
      .padding(16)
      .accessibilityIdentifier("permissions.confirm.add.apply")
    }
  }

  @ViewBuilder private func list(
    for state: Controller.ViewState
  ) -> some View {
...
